--- a/styles/index.processed.css
+++ b/styles/index.processed.css
@@ -11,8 +11,13 @@
   box-sizing: border-box;
   font-family: 'Catamaran', sans-serif;
 }
+html{
+  width: 100vw;
+  overflow-x: hidden;
+}
 
 body {
+  width: 100vw;
   margin: 0;
   padding: 0;
   overflow-x:hidden;
@@ -46,7 +51,7 @@ content page footer {
   bottom: 10px;
 }
 
-content page .table {
+content page .table { 
   font-family: 'Catamaran', sans-serif;
   font-size: 1.2em;
   -webkit-font-smoothing: antialiased;
@@ -55,7 +60,7 @@ content page .table {
   max-height: 80vh; /* Sets the maximum height of the div to 66% of the viewport height */
   width: inherit;
   /* display: inline-flex; */
-  overflow-y: scroll;
+  /* overflow-y: scroll; */
   overflow-x: hidden;
   padding-top: 2vh;
 }
@@ -149,11 +154,18 @@ content #contact {
   animation-fill-mode: forwards;
 }
 
-
+#welcomeContent{
+  position: relative;
+  top: 10vh;
+}
 .column {
   display: block;
   float: left;
   flex-grow: 1;
+  padding-top: 1vh;
+  padding-bottom: 1vh;
+  padding-left: 1vw;
+  padding-right: 1vw;
 }
 .colspan{
   /* overflow-y: hidden; */
@@ -173,20 +185,25 @@ content #contact {
   }
 }
 .animation{
-  position: absolute;
+  position: fixed;
   top:2vh;
-  right:5px;
+  left: 50vw;
+  width:30vw;
+  height:100%;
 }
-.banner{
-  display: flex;
-  width: 100%;
+.animation__container{
+  position: relative;
+  /* top:2vh;
+  right:5px; */
+
 }
 #welcomebanner{
   align:left ;
-  position: relative;
-  left:-20vw;
+  position: absolute;
+  left:10vw;
   top:2vh;
   text-align: left;
+  padding-bottom: 1vh;;
 }
 /* Hide scrollbar for Chrome, Safari and Opera */
 .table::-webkit-scrollbar {
@@ -200,16 +217,29 @@ div::-webkit-scrollbar {
 }
 /* Hide scrollbar for IE, Edge and Firefox */
 .table {
+  height:fit-content;
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;  /* Firefox */
+  /* overflow-y: scroll; */
 }
 #repos{
-  height: auto;
-  max-height: 20vh;
-  overflow-y: scroll;
+  /* height: 80vh; */
+  width:100%;
+  /* max-height:80vh; */
+  /* overflow-y: scroll; */
   padding:10px;
 }
 #repos * {
   padding:10px;
   text-align: left;
+}
+.span{
+  padding-bottom: 2vh;
+  padding-left: 1vw; 
+  padding-right: 1vw;
+}
+.square{
+  height:fit-content;
+  position: fixed;
+  overflow: hidden;
 }
